overlapping issue fixed when filters are expanded

--- a/src/app/modules/poducts/productfilters/productfilters.component.scss
+++ b/src/app/modules/poducts/productfilters/productfilters.component.scss
@@ -26,4 +26,7 @@
       text-align: left;
       color: #41c2c2!important;
     }
+    .cursor-pointer {
+      cursor: pointer;
+    }
   }
